# MLOps-Course-Labs

./: .dockerignore  Dockerfile  main.py  pyproject.toml
.github/workflows/: actions.yml
app/: logger_setup.py  model_utils.py
tests/: test_main.py
